--- a/Python_for_Data_Science.ipynb
+++ b/Python_for_Data_Science.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Python for Data Science.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO6ICHZd3LTS6WWoAHwhYlA",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPALn0dsKXLCA7acMC17IUE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +30,134 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "zvhv7eNgnPqx"
       },
       "outputs": [],
       "source": [
-        ""
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr1 = np.array([[1,2],\n",
+        "                 [3,4]])\n",
+        "arr2 = np.array([[5,6],\n",
+        "                 [7,8]])"
+      ],
+      "metadata": {
+        "id": "aXoBlSiUoDtG"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#print(arr1)\n",
+        "#print(arr2)\n",
+        "np.concatenate((arr1,arr2),axis=0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EyUGoOZcoWDO",
+        "outputId": "58af43df-4fe1-4619-e6c1-46b11ae23c8a"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2],\n",
+              "       [3, 4],\n",
+              "       [5, 6],\n",
+              "       [7, 8]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr3 = np.array([1,2])\n",
+        "arr4 = np.array([3,4])\n",
+        "print(arr3)\n",
+        "print(arr4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x3-5UwNhooy2",
+        "outputId": "3a2a709c-9724-45ca-a688-525ca1b5a223"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2]\n",
+            "[3 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.concatenate((arr3,arr4), axis=0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uLG14ehio0PG",
+        "outputId": "266f733f-2e7d-4fa7-806c-cc8a0ab05deb"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr1.min(axis=1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sq_n45PupJvu",
+        "outputId": "31120954-5522-4b2d-b31f-4552d685b7fc"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 3]\n"
+          ]
+        }
       ]
     }
   ]
